feat: Add PDF export functionality to certificate editor

--- a/src/app/certificate-editor/certificate-editor.component.html
+++ b/src/app/certificate-editor/certificate-editor.component.html
@@ -16,6 +16,7 @@
         [currentTemplate]="currentTemplate"
         (createNewTemplate)="createNewTemplate()"
         (saveTemplate)="saveTemplate()"
+        (exportToPDF)="exportToPDF()"
       >
       </app-toolbar>
 
