feat: Add delete functionality for selected elements in properties panel

--- a/src/app/certificate-editor/certificate-editor.component.html
+++ b/src/app/certificate-editor/certificate-editor.component.html
@@ -44,6 +44,7 @@
       <app-properties-panel
         [selectedObject]="selectedObject"
         (propertyChange)="fabricService.updateObject($event)"
+        (deleteElement)="deleteSelectedElement()"
       >
       </app-properties-panel>
     </div>
