--- a/src/app/certificate-editor/components/saved-templates/saved-templates.component.scss
+++ b/src/app/certificate-editor/components/saved-templates/saved-templates.component.scss
@@ -7,3 +7,34 @@
 button {
   min-width: 80px;
 }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+
+  th {
+    text-align: left;
+    padding: 0.75rem;
+    background-color: #f8f9fa;
+    border-bottom: 2px solid #dee2e6;
+  }
+
+  td {
+    padding: 0.75rem;
+    vertical-align: middle;
+  }
+
+  th:first-child,
+  td:first-child {
+    width: 50px;
+    text-align: center;
+  }
+
+  i {
+    font-size: 1rem;
+  }
+
+  .text-end {
+    text-align: right;
+  }
+}
