--- a/src/app/certificate-editor/certificate-editor.component.html
+++ b/src/app/certificate-editor/certificate-editor.component.html
@@ -1,17 +1,6 @@
 <div class="container-fluid h-100">
-  <div class="row h-100">
-    <!-- Elements Panel -->
-    <div class="col-md-2 bg-light p-3">
-      <app-elements-panel
-        (addText)="addText()"
-        (addImage)="addImage()"
-        (addShape)="addShape($event)"
-      >
-      </app-elements-panel>
-    </div>
-
-    <!-- Main Canvas Area -->
-    <div class="col-md-8 p-3">
+  <div class="row">
+    <div class="col-12">
       <app-toolbar
         [currentTemplate]="currentTemplate"
         [isPreviewMode]="isPreviewMode"
@@ -21,7 +10,25 @@
         (togglePreviewMode)="togglePreviewMode()"
       >
       </app-toolbar>
+    </div>
+  </div>
+  <div class="row flex-grow-1">
+    <!-- Elements Panel -->
+    <div *ngIf="currentTemplate" class="col-md-2 bg-light p-3">
+      <app-elements-panel
+        (addText)="addText()"
+        (addImage)="addImage()"
+        (addShape)="addShape($event)"
+      >
+      </app-elements-panel>
+    </div>
 
+    <!-- Main Canvas Area -->
+    <div
+      [class.col-md-8]="currentTemplate"
+      [class.col-md-12]="!currentTemplate"
+      class="p-3"
+    >
       <div [class.hidden]="!currentTemplate">
         <div #canvasContainer class="canvas-container border">
           <canvas #canvas id="certificate-canvas"></canvas>
@@ -42,15 +49,19 @@
     </div>
 
     <!-- Properties Panel -->
-    <div *ngIf="!isPreviewMode" class="col-md-2 bg-light p-3">
+    <div
+      *ngIf="currentTemplate && !isPreviewMode"
+      class="col-md-2 bg-light p-3"
+    >
       <app-properties-panel
         [selectedObject]="selectedObject"
         (propertyChange)="fabricService.updateObject($event)"
         (deleteElement)="deleteSelectedElement()"
+        (cloneElement)="cloneSelectedElement()"
       >
       </app-properties-panel>
     </div>
-    <div *ngIf="isPreviewMode" class="col-md-2 bg-light p-3">
+    <div *ngIf="currentTemplate && isPreviewMode" class="col-md-2 bg-light p-3">
       <app-placeholder-panel
         [visible]="isPreviewMode"
         [placeholders]="placeholders"
