--- a/src/app/certificate-editor/components/toolbar/toolbar.component.html
+++ b/src/app/certificate-editor/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between mb-3">
+<div class="d-flex justify-content-between align-items-center w-100 mb-3 pt-2">
   <!-- Current Template Name -->
   <div>
     <span *ngIf="currentTemplate; else noTemplate" class="fw-bold">
@@ -10,7 +10,7 @@
   </div>
 
   <!-- Toolbar Buttons -->
-  <div>
+  <div class="d-flex">
     <button
       class="btn btn-success me-2"
       (click)="createNewTemplate.emit()"
@@ -18,22 +18,23 @@
     >
       <i class="bi bi-file-earmark-plus"></i> New Template
     </button>
-    <button
-      class="btn btn-primary me-2"
-      [disabled]="!currentTemplate"
-      (click)="saveTemplate.emit()"
-      title="Save Current Template"
-    >
-      <i class="bi bi-save"></i> Save Template
-    </button>
+    <div *ngIf="currentTemplate">
+      <button
+        class="btn btn-primary me-2"
+        (click)="saveTemplate.emit()"
+        title="Save Current Template"
+      >
+        <i class="bi bi-save"></i> Save Template
+      </button>
 
-    <button
-      class="btn btn-warning me-2"
-      (click)="exportToPDF.emit()"
-      title="Export to PDF"
-    >
-      <i class="bi bi-file-earmark-pdf"></i> Export to PDF
-    </button>
+      <button
+        class="btn btn-warning me-2"
+        (click)="exportToPDF.emit()"
+        title="Export to PDF"
+      >
+        <i class="bi bi-file-earmark-pdf"></i> Export to PDF
+      </button>
+    </div>
 
     <!-- Preview Mode Toggle Button -->
     <button
@@ -52,7 +53,7 @@
     </button>
   </div>
 
-  <div class="d-flex align-items-center">
+  <div class="d-flex align-items-center" *ngIf="currentTemplate">
     <input
       type="color"
       class="form-control form-control-color d-inline-block me-2"
@@ -80,3 +81,5 @@
     </div>
   </div>
 </div>
+
+<hr class="my-3" />
